--- a/index.html
+++ b/index.html
@@ -26,11 +26,40 @@
     </div>
     <div class="second">
         <div class="header-two">Some random information.</div>
-        <div></div>
+        <div class="container">
+            <div class="card">'
+                <img src="#" alt="pic-1">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">'
+                <img src="#" alt="pic-2">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">'
+                <img src="#" alt="pic-3">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">'
+                <img src="#" alt="pic-4">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
-    <div class="third"></div>
-    <div class="fourth"></div>
-    <div class="footer"></div>
+    <div class="third">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class ="author">-Thor, God of Thunder</div>
     </div>
+    <div class="fourth">
+        <div class="blue-container">
+            <div class="text-fourth">
+                <div class="call">Call to action! It's time!</div>
+                <div class="sub-call">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="sign-up">
+                <button>sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">Copyright (c) The Odin Project 2021</div>
 </body>
 </html>
