--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="first">
         <div class="left">
             <div class="caption">This website is awesome</div>
-            <div class="sub1">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <div class="sub-one">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
             <div class="button">
                 <button>Sign up</button>
             </div>
@@ -31,19 +31,19 @@
         <div class="header-two">Some random information.</div>
         <div class="container">
             <div class="card">'
-                <img src="#" alt="pic-1">
+                <img src="#" alt="pic-one">
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">'
-                <img src="#" alt="pic-2">
+                <img src="#" alt="pic-two">
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">'
-                <img src="#" alt="pic-3">
+                <img src="#" alt="pic-three">
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">'
-                <img src="#" alt="pic-4">
+                <img src="#" alt="pic-four">
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
